fix issue and remove some unused code

--- a/company.html
+++ b/company.html
@@ -6,9 +6,6 @@
     <title>Company</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <style>
         .body-container {
             min-height: 100vh;
@@ -142,12 +139,15 @@
             }
         }
     </style>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="body-container">
         <div class="header">
-            <img src="logo.png" class="logo-img">
+            <img alt="logo" src="images/logo.png" class="logo-img">
             <div class="container">
                 <div class="row">
                     <nav class="left col-sm-8 navbar navbar-expand-lg">
@@ -180,9 +180,9 @@
             </div>
         </div>
         <div class="main">
-            <img src="com1.png" class="sl-img">
+            <img alt="com1" src="images/com1.png" class="sl-img">
             <div class="content-container">
-                <img src="com2.png">
+                <img alt="com2" src="images/com2.png">
                 <div class="content">
                     <ul>
                         <li>Trust</li>
@@ -202,11 +202,11 @@
                     <p>Ducati is proud to represent Italian industry - the <strong>essence of Italian style</strong> <br/>shows through the design of each bike. Sinuous, seductive and flexible <br/>lines with a permanent, timeless quality that sets an unsurpassable<br/>standard.
                         Ducati Bikes – in over 60 nations throughout the world these <br/>models dominate the dreams of the most ardent motorcycle enthusiasts. </p>
                 </div>
-                <img src="com3.png">
+                <img alt="com3" src="images/com3.png">
             </div>
 
             <div class="content-container">
-                <img src="com4.png">
+                <img alt="com4" src="images/com4.png">
                 <div class="content">
                     <p>The <strong>Desmodromic valve control system,</strong> the steel tubular Trellis frame, <br/>the <strong>L-Twin engine </strong>and the <strong>unmistakable sound of the power unit </strong>– these <br/>are the distinguishing features
                         that underline the uniqueness of a Ducati. </p>
@@ -224,11 +224,11 @@
                         <br/>to the Ducati flag. Ducatisti meet up at racetracks and events, at the <br/>World Ducati Week and also on Ducati.com, which is visited by over 14 <br/>million fans each year.
                     </p>
                 </div>
-                <img src="com5.png">
+                <img alt="com5" src="images/com5.png">
             </div>
 
             <div class="content-container">
-                <img src="com6.png">
+                <img alt="com6" src="images/com6.png">
                 <div class="content">
                     <p>The story of the Ducati dream, which began in Bologna in 1926, is <br/>recounted at the <strong>Ducati Museum.</strong> Here the stories of legendary bikes and <br/>riders are told and a pure passion for performance and excellence
                         <br/>permeates the air. A passion that travels fast, opening new roads and <br/>creating history.
@@ -239,7 +239,7 @@
         </div>
         <div class="footer">
             <div class="top">
-                <img src="ducati-text.png" class="ducati-text">
+                <img alt="ducati-text" src="images/ducati-text.png" class="ducati-text">
             </div>
             <div class="mid">
                 <p>Copyright © 2020 Ducati Motor Holding S.p.A. – A Sole Shareholder Company - A Company subject to the Management and Coordination <br/> activities of AUDI AG. All rights reserved. VAT 05113870967</p>
@@ -250,7 +250,6 @@
                 <i class="fab fa-instagram fa-lg"></i>
                 <i class="fab fa-youtube fa-lg"></i>
                 <i class="fab fa-linkedin-in fa-lg"></i>
-
             </div>
         </div>
     </div>
