--- a/contact-details.html
+++ b/contact-details.html
@@ -206,7 +206,7 @@
 <body>
     <div class="body-container">
         <div class="header">
-            <img src="logo.png" class="logo-img">
+            <img alt="logo" src="images/logo.png" class="logo-img">
             <div class="container">
                 <div class="row">
                     <nav class="left col-sm-8 navbar navbar-expand-lg">
@@ -283,7 +283,7 @@
         </div>
         <div class="footer">
             <div class="top">
-                <img src="ducati-text.png" class="ducati-text">
+                <img alt="ducati-text" src="images/ducati-text.png" class="ducati-text">
             </div>
             <div class="mid">
                 <p>Copyright © 2020 Ducati Motor Holding S.p.A. – A Sole Shareholder Company - A Company subject to the Management and Coordination <br/> activities of AUDI AG. All rights reserved. VAT 05113870967</p>
