--- a/home.html
+++ b/home.html
@@ -112,14 +112,13 @@
         .bot i {
             color: #ffffff;
         }
-
     </style>
 </head>
 
 <body>
     <div class="body-container">
         <div class="header">
-            <img src="logo.png" class="logo-img">
+            <img alt="logo" src="images/logo.png" class="logo-img">
             <div class="container">
                 <div class="row">
                     <nav class="left col-sm-8 navbar navbar-expand-lg">
@@ -160,13 +159,13 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="sl1.png" class="sl-img">
+                        <img alt="sl1" src="images/sl1.png" class="sl-img">
                     </div>
                     <div class="carousel-item">
-                        <img src="sl2.png" class="sl-img">
+                        <img alt="sl2" src="images/sl2.png" class="sl-img">
                     </div>
                     <div class="carousel-item">
-                        <img src="sl3.png" class="sl-img">
+                        <img alt="sl3" src="images/sl3.png" class="sl-img">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -181,7 +180,7 @@
         </div>
         <div class="footer">
             <div class="top">
-                <img src="ducati-text.png" class="ducati-text">
+                <img alt="ducati-text" src="images/ducati-text.png" class="ducati-text">
             </div>
             <div class="mid">
                 <p>Copyright © 2020 Ducati Motor Holding S.p.A. – A Sole Shareholder Company - A Company subject to the Management and Coordination <br/> activities of AUDI AG. All rights reserved. VAT 05113870967</p>
