--- a/model-details.html
+++ b/model-details.html
@@ -152,7 +152,7 @@
 <body>
     <div class="body-container">
         <div class="header">
-            <img src="logo.png" class="logo-img">
+            <img alt="logo" src="images/logo.png" class="logo-img">
             <div class="container">
                 <div class="row">
                     <nav class="left col-sm-8 navbar navbar-expand-lg">
@@ -185,12 +185,12 @@
             </div>
         </div>
         <div class="main">
-            <img src="model.png" class="sl-img">
+            <img alt="model" src="images/model.png" class="sl-img">
             <div class="video-container">
                 <iframe width="80%" height="80%" src="https://www.youtube.com/embed/yXB4eXXD0wI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="content-container">
-                <img src="panigale1.png">
+                <img alt="panigale1" src="images/panigale1.png">
                 <div class="content">
                     <h1>OVERVIEW</h1>
                     <p>The 2020 version of the new Panigale V4 boosts performance even further and takes track riding to the next level for amateurs and pros alike. A series of refinements make for an easier, more user-friendly, less fatiguing ride while
@@ -212,11 +212,11 @@
                         <br/> Plexiglas screen, nose fairing and larger lateral fairings<br/> More efficient lateral vents for radiator through-air<br/> Aerofoils
                     </p>
                 </div>
-                <img src="panigale2.png">
+                <img alt="panigale2" src="images/panigale2.png">
             </div>
 
             <div class="content-container">
-                <img src="panigale3.png">
+                <img alt="panigale3" src="images/panigale3.png">
                 <div class="content">
                     <h1>ENGINE</h1>
                     <h4>V4 90° layout</h4>
@@ -232,7 +232,7 @@
         </div>
         <div class="footer">
             <div class="top">
-                <img src="ducati-text.png" class="ducati-text">
+                <img alt="ducati-text" src="images/ducati-text.png" class="ducati-text">
             </div>
             <div class="mid">
                 <p>Copyright © 2020 Ducati Motor Holding S.p.A. – A Sole Shareholder Company - A Company subject to the Management and Coordination <br/> activities of AUDI AG. All rights reserved. VAT 05113870967</p>
