--- a/contact.html
+++ b/contact.html
@@ -176,7 +176,7 @@
 <body>
     <div class="body-container">
         <div class="header">
-            <img src="logo.png" class="logo-img">
+            <img alt="logo" src="images/logo.png" class="logo-img">
             <div class="container">
                 <div class="row">
                     <nav class="left col-sm-8 navbar navbar-expand-lg">
@@ -209,7 +209,7 @@
             </div>
         </div>
         <div class="content">
-            <img src="contact.png" class="sl-img">
+            <img alt="contact" src="images/contact.png" class="sl-img">
 
             <div class="question-info">
                 <p class="text-2">FREQUENTLY ASKED QUESTIONS</p>
@@ -220,15 +220,15 @@
 
             <div class="question-category">
                 <div class="category-img">
-                    <img src="ct1.png" class="ct-img">
+                    <img alt="ct1" src="images/ct1.png" class="ct-img">
                     <p class="text-15">COMPANY</p>
                 </div>
                 <div class="category-img">
-                    <img src="ct2.png" class="ct-img">
+                    <img alt="ct2" src="images/ct2.png" class="ct-img">
                     <p class="text-15">PRODUCTS</p>
                 </div>
                 <div class="category-img">
-                    <img src="ct3.png" class="ct-img">
+                    <img alt="ct3" src="images/ct3.png" class="ct-img">
                     <p class="text-15">EXPERIENCES</p>
                 </div>
             </div>
@@ -244,7 +244,7 @@
         </div>
         <div class="footer">
             <div class="top">
-                <img src="ducati-text.png" class="ducati-text">
+                <img alt="ducati-text" src="images/ducati-text.png" class="ducati-text">
             </div>
             <div class="mid">
                 <p>Copyright © 2020 Ducati Motor Holding S.p.A. – A Sole Shareholder Company - A Company subject to the Management and Coordination <br/> activities of AUDI AG. All rights reserved. VAT 05113870967</p>
@@ -255,7 +255,6 @@
                 <i class="fab fa-instagram fa-lg"></i>
                 <i class="fab fa-youtube fa-lg"></i>
                 <i class="fab fa-linkedin-in fa-lg"></i>
-
             </div>
         </div>
     </div>
