--- a/price.html
+++ b/price.html
@@ -143,7 +143,7 @@
 <body>
     <div class="body-container">
         <div class="header">
-            <img src="logo.png" class="logo-img">
+            <img alt="logo" src="images/logo.png" class="logo-img">
             <div class="container">
                 <div class="row">
                     <nav class="left col-sm-8 navbar navbar-expand-lg">
@@ -179,7 +179,7 @@
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="price.png" class="sl-img">
+                        <img alt="price" src="images/price.png" class="sl-img">
                         <div class="price-content">
                             <div class="price-item">
                                 <h1>Monster 797</h1>
@@ -207,7 +207,7 @@
         </div>
         <div class="footer">
             <div class="top">
-                <img src="ducati-text.png" class="ducati-text">
+                <img alt="ducati-text" src="images/ducati-text.png" class="ducati-text">
             </div>
             <div class="mid">
                 <p>Copyright © 2020 Ducati Motor Holding S.p.A. – A Sole Shareholder Company - A Company subject to the Management and Coordination <br/> activities of AUDI AG. All rights reserved. VAT 05113870967</p>
